XMLArchiver: Some refactoring